--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PAYLOAD_SECRET=masecret
-MONGODB_URL=mongodb+srv://wasd:WASD@cluster2.miwfh3x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+MONGODB_URL=mongodb+srv://awd:awd@cluster4.fhjig4k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4
