--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,12 +1,10 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "module": "CommonJS",
+    "outDir": "dist",
+    "noEmit": false,
+    "jsx": "react"
   },
-  "include": ["src/**/*"]
+  "include": ["src/server.ts", "src/payload.config.ts"]
 }
