--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PAYLOAD_SECRET=masecret
-MONGODB_URL=mongodb+srv://awd:awd@cluster4.fhjig4k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4
+PAYLOAD_SECRET = mysecret
+MONGODB_URL = mongodb+srv://awd:awd@cluster4.fhjig4k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4
+NEXT_PUBLIC_SERVER_URL = https://localhost:3000
