--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "hippomarket",
+  "name": "digitalhippo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon --exec ts-node --project tsconfig.server.json src/server.ts",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
+    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.4.2",
+    "@hookform/resolvers": "^3.4.0",
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.5.1",
     "@payloadcms/richtext-slate": "^1.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -24,38 +24,33 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "class-variance-authority": "^0.7.0",
-    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lucide-react": "^0.378.0",
-    "mongodb": "^6.6.2",
-    "mongoose": "^8.4.0",
     "next": "14.2.3",
-    "payload": "^2.18.3",
+    "payload": "^2.17.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
-    "slate": "^0.103.0",
+    "react-hook-form": "^7.51.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "trpc": "^0.11.3",
-    "webpack": "^5.91.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "nodemon": "^3.1.1",
+    "nodemon": "^3.1.0",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "^5"
   }
 }
