--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PAYLOAD_SECRET = mysecret
 MONGODB_URL = mongodb+srv://awd:awd@cluster4.fhjig4k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4
 NEXT_PUBLIC_SERVER_URL = https://localhost:3000
+
+RESEND_API_KEY = re_4VA1mjgf_7ga2LefvV5kN4u2dHpKUrhHr
