--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.19.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "payload": "^2.17.0",
     "react": "^18",
     "react-dom": "^18",
